2004-02-17  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/sp-guide.h, src/sp-guide.cpp (sp_guide_moveto,
	sp_guide_position_set):
	Combine into a single sp_guide_moveto routine accepting a `commit'
	argument.  Update callers.

2004-02-16  MenTaLguY <mental@rydia.net>

	* src/libnr/nr-types.h, src/libnr/nr-rect.cpp, src/libnr/nr-maybe.h,
	  src/seltrans.cpp:
	  started on revising the NR::Rect stuff, and introduced NR::ConvexHull

2004-02-16  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/xml/repr.cpp (sp_repr_document_root): Fix typo in most recent commit.

2004-02-14  MenTaLguY <mental@rydia.net>

	* src/svg/svg-path.cpp: switched to locale-safe iostreams-based path
							serialization

	* src/xml/repr-io.cpp, src/xml/repr.cpp, src/widgets/sp-xmlview-tree.cpp,
	  src/widgets/sp-xmlview-content.cpp, src/dialogs/xml-tree.cpp:
	  basic support for XML comments

2004-02-14  bulia byak <bulia@users.sourceforge.net>

	* src/dialogs/dialog-events.cpp: Added UTILITY hint to sp_transientize() 

	* po/fr.po: Update from f.rodrigo@tuxfamily.org 

	* src/interface.cpp: Fix for underscore in the recent files menu, by alxrem 

	* src/event-context.cpp src/preferences-skeleton.h: Accelerated scrolling by Ctrl-arrows

	* src/event-context.cpp: Ctrl-middle-click zooms in

	* doc/keys.xml doc/keys-svg.xsl doc/keys-html.xsl doc/keys.html icons/keys.svg:
	Updated middle and right buttons scroll/zoom, cosmetics
   
	* src/shortcuts.cpp: Menu shortcut fix 

	* src/verbs.cpp,h: New verb: deselect 

	* src/selection.cpp,h: Removed unused function

	* src/interface.cpp: Removed Edit/Clear All, added Edit/Deselect. Comment fix

	* src/toolbox.cpp: Spelling fix: symmetric, not symmetrical

	* src/desktop.cpp,h: sp_desktop_point(): returns mouse point in document coordinates

	* src/selection-chemistry.cpp,h: sp_selection_paste obeys in_place parameter

	* src/verbs.cpp src/verbs.h src/shortcuts.cpp: Paste in place verb, shortcut 
